added restore action

--- a/bump-settings.json
+++ b/bump-settings.json
@@ -1,5 +1,17 @@
 {
-    "contracts": ["CBFKJ2F7U4S6OOILIERHXNCZVCBUT7QNXSWHSU5U7FYOCAV7NETKEYIK", "CCJKF5BKXBAF4OWVUUN2SI7AT7CGUITILFF4SP6WY6OUI4E5IIDEQRWU"],
+    "contracts": [
+        "CDMQVP6T3OOPN34K4TCIGTVWG3DIAD45H6MODYRIXPR7G3BJ7OLCDEZF",
+        "CDWSPRPIOECUHNN6RE4FKSSDOSA2QQ2SG5N5BMLDHI5FRFBIMO7YA3TY",
+
+        "CB6XUYN36MUM3DF64PODVI4N3PT2ZJCB6WYZBXNFRT5QGFDRE34GMEL6", 
+        "CDOS5G27CSXYYEDEX7P52PNA6HUUV5XLPYPF67PYCB7JIUVIID2TWFWI",
+        "CBJX7VZOKNJSCR7FV3E7WKDY255IBZRTF6AU5MYE3IBCXVAIS7FGVPPA",
+        "CC7MYMK7I6YDLYLL3JCBZDJGYU4CFENE4DAI3KV7YM2UEMP357TGGS3A",
+        "CCPGW7WTJPF5IJEHPNEUTKVVBO5GOV7SL6CN7QFJ5FKBGGOLIJDACYXI",
+        "CDMQPRUJZOMUF6DZRGHRSWTXJKXM5FBLNCEKSIPTILNN5XYIQMPOBMYB",
+        "CCSLU7MSBSTHMBP5ICPHNSRX3V6BWH3XBTYAJQDGUS2IKJCEYZESAPHD",
+        "CCRWLEKLROZQD4L6WLZLOUEZHPLL7F4MU7NPAHEAW5Z7HTS6HGHSWEII"
+    ],
     "min_ledgers_to_live": 200000,
     "rpc_url": "https://rpc-futurenet.stellar.org:443/",
     "network": "Test SDF Future Network ; October 2022"
