--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,5 @@ serde_json = "1.0.48"
 clap = "4.3.10"
 ed25519-dalek = "1.0.1"
 tokio = { version = "1", features = ["full"] }
-
+hex = "0.4.3"
+reqwest = {version="0.11.18", features=["json"]}
